--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Used for azure-search-integrated-vectorization-sample
-AZURE_OPENAI_ENDPOINT="https://ml-workspace0312-aoai.openai.azure.com/"
+AZURE_OPENAI_ENDPOINT=""
 
 # Optional, only required if not using RBAC authentication
-AZURE_OPENAI_KEY="962389a037aa4cbda606fe503fe42400"
+AZURE_OPENAI_KEY=""
 
 
